--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.1.3",
+    "chartjs": "^0.3.24",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
